created a navigation bar using routes

--- a/views/deckCreate.html
+++ b/views/deckCreate.html
@@ -8,7 +8,7 @@
 
   </head>
   <body>
-      <h1>Home Page</h1>
+      <h1>Deck Create</h1>
       <div class="nav-bar">
         <a href="/"><button class="btn">Home</button></a>
 	       <a href="/viewDecks"><button class="btn">Decks</button></a>
@@ -16,8 +16,9 @@
          <a href="/newCard"><button class="btn">Add Cards</button></a>
          <a href="/newDeck"><button class="btn">Create Deck</button></a>
       </div>
+
       <div class="display">
-        <a>Home page display</a>
+        <a>Deck Create View</a>
       </div>
   </body>
 </html>
