--- a/views/deckView.html
+++ b/views/deckView.html
@@ -8,16 +8,16 @@
 
   </head>
   <body>
-      <h1>Home Page</h1>
+      <h1>Deck View</h1>
       <div class="nav-bar">
         <a href="/"><button class="btn">Home</button></a>
-	       <a href="/viewDecks"><button class="btn">Decks</button></a>
+         <a href="/viewDecks"><button class="btn">Decks</button></a>
          <a href="/listCards"><button class="btn">Card List</button></a>
          <a href="/newCard"><button class="btn">Add Cards</button></a>
          <a href="/newDeck"><button class="btn">Create Deck</button></a>
       </div>
       <div class="display">
-        <a>Home page display</a>
+        <a>Deck viewed here</a>
       </div>
   </body>
 </html>
