--- a/views/cardList.html
+++ b/views/cardList.html
@@ -8,7 +8,7 @@
 
   </head>
   <body>
-      <h1>Home Page</h1>
+      <h1>Card List</h1>
       <div class="nav-bar">
         <a href="/"><button class="btn">Home</button></a>
 	       <a href="/viewDecks"><button class="btn">Decks</button></a>
@@ -17,7 +17,7 @@
          <a href="/newDeck"><button class="btn">Create Deck</button></a>
       </div>
       <div class="display">
-        <a>Home page display</a>
+        <a>card list here</a>
       </div>
   </body>
 </html>
