--- a/views/css/home.css
+++ b/views/css/home.css
@@ -13,18 +13,25 @@ h1{
 	width: 100%;
 }
 .btn{
-  border-color: red;
-  width: 100%;
-  height: 50px;
+  border-color: blue;
   margin: 0px;
 	color: #000080;
 	text-decoration: none;
   font-size: 18pt;
   font-weight: bold;
   background: #ADFF2F;
+  float: left;
+  height: 35px;
+  width: 20%;
 }
-.left{
+.nav-bar{
   background-color: red;
-  width: 25%;
-  height: 100%;
+  width: 100%;
+}
+.display{
+  margin: 100px 0px 0px 0px;
+  padding:5px .5% 5px .5%;
+  background-color: blue;
+  width: 99%;
+  height: 200px;
 }
