started work on the card list tab

--- a/views/cardList.html
+++ b/views/cardList.html
@@ -5,7 +5,7 @@
     <title>Card Collection</title>
 
     <link rel="stylesheet" href="/css/home.css">
-
+    <script src="javascripts/cardsList.js"></script>
   </head>
   <body>
       <h1>Card List</h1>
