created a basic list for the card list

--- a/views/cardList.html
+++ b/views/cardList.html
@@ -6,8 +6,10 @@
 
     <link rel="stylesheet" href="/css/home.css">
     <script src="javascripts/cardsList.js"></script>
+    <script src="javascripts/cardListView.js"></script>
   </head>
   <body>
+    <section id=CardList>
       <h1>Card List</h1>
       <div class="nav-bar">
         <a href="/"><button class="btn">Home</button></a>
@@ -16,8 +18,8 @@
          <a href="/newCard"><button class="btn">Add Cards</button></a>
          <a href="/newDeck"><button class="btn">Create Deck</button></a>
       </div>
-      <div class="display">
-        <a>card list here</a>
+      <div id="display">
       </div>
+    </section>
   </body>
 </html>
